# llama-index-reader-salesforce-npsp

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
examples/: salesforce_npsp_fundraising_qa.ipynb
llama_index/readers/salesforce_npsp/: __init__.py  base.py
tests/: __init__.py  test_base.py  test_salesforce_npsp.py
