[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llama-index-reader-salesforce-npsp"
version = "0.1.0"
description = "A Salesforce NPSP data reader for LlamaIndex to empower data-driven fundraising intelligence."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Shivam Ashokbhai Lalakiya" }]
dependencies = [
  "llama-index-core>=0.10.0",
  "simple-salesforce>=1.12.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/shivamlalakiya/llama-index-reader-salesforce-npsp"
Repository = "https://github.com/shivamlalakiya/llama-index-reader-salesforce-npsp"

[tool.hatch.build.targets.wheel]
packages = ["llama_index"]

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
show_error_codes = true
pretty = true
follow_imports = "skip"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["simple_salesforce", "simple_salesforce.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests", "tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = ["llama_index.readers.salesforce_npsp.base"]
disallow_subclassing_any = false
